[BE] refactor: userContext null check 추가 #338